--- a/index.html
+++ b/index.html
@@ -2,12 +2,29 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1 viewport-fit=cover">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" href="assets/css/starter.css">
     <title>Bootstrap-webpack</title>
   </head>
   <body>
-    <h1>Hello</h1>
+<div class="top-bar">
+  <div class="container">
+    <div class="col-12 text-right">
+      <a href="tel:+485883452593">ZADZWOŃ DO NAS</a>
+    </div>
+  </div>
+</div>
+
+<nav class="navbar bg-light navbar-light navbar-expand-lg">
+  <div class="container">
+<a href="index.html" class="navbar-brand"><img src="./assets/img/logo.png" alt="Logo of Puppella" title="Logo of Puppella"></a>
+  </div>
+
+</nav>
+
+ 
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script type="module" src="assets/js/starter.js"></script>
   </body>
