--- a/index.html
+++ b/index.html
@@ -1,31 +1,46 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1 viewport-fit=cover">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="shortcut icon" href="favicon.ico">
-    <link rel="stylesheet" href="assets/css/starter.css">
-    <title>Bootstrap-webpack</title>
-  </head>
-  <body>
-<div class="top-bar">
-  <div class="container">
-    <div class="col-12 text-right">
-      <a href="tel:+485883452593">ZADZWOŃ DO NAS</a>
+
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1 viewport-fit=cover" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="shortcut icon" href="favicon.ico" />
+  <link rel="stylesheet" href="assets/css/starter.css" />
+  <title>Bootstrap-webpack</title>
+</head>
+
+<body>
+  <div class="top-bar">
+    <div class="container">
+      <div class="col-12 text-right">
+        <a href="tel:+485883452593">ZADZWOŃ DO NAS</a>
+      </div>
     </div>
   </div>
-</div>
 
-<nav class="navbar bg-light navbar-light navbar-expand-lg">
-  <div class="container">
-<a href="index.html" class="navbar-brand"><img src="./assets/img/logo.png" alt="Logo of Puppella" title="Logo of Puppella"></a>
-  </div>
+  <nav class="navbar bg-light navbar-light navbar-expand-lg">
+    <div class="container">
+      <a href="index.html" class="navbar-brand"><img src="./assets/img/logo.png" alt="Logo of Puppella"
+          title="Logo of Puppella" /></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item"><a href="index.html" class="nav-link active">Home</a></li>
+          <li class="nav-item"><a href="" class="nav-link">About</a></li>
+          <li class="nav-item"><a href="" class="nav-link">Services</a></li>
+          <li class="nav-item"><a href="" class="nav-link">Products</a></li>
+          <li class="nav-item"><a href="" class="nav-link">Contact</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 
-</nav>
+  <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
+  <script type="module" src="assets/js/starter.js"></script>
+  <script src="js/all.min.js"></script>
+</body>
 
- 
-    <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
-    <script type="module" src="assets/js/starter.js"></script>
-  </body>
 </html>
