--- a/index.html
+++ b/index.html
@@ -38,9 +38,28 @@
     </div>
   </nav>
 
+  <div id="carousel" class="carousel slide" data-ride="carousel" data-interval="5000">
+<div class="carousel-inner">
+
+  <div class="carousel-item active"><img src="./assets/img/2.jpg" alt="" class="w-100"></div>
+  <div class="carousel-item"><img src="./assets/img/1.jpg" alt="" class="w-100"></div>
+  <div class="carousel-item"><img src="./assets/img/3.jpg" alt="" class="w-100"></div>
+  <div class="carousel-item"><img src="./assets/img/4.jpg" alt="" class="w-100"></div>
+
+</div>
+
+<a href="#carousel" class="carousel-control-prev" role="button" data-slide="prev">
+  <img src="./assets/img/prev.svg" alt="Icon moving to previous foto">
+</a>
+
+<a href="#carousel" class="carousel-control-next" role="button" data-slide="next">
+  <img src="./assets/img/next.svg" alt="Icon moving to next foto">
+</a>
+
+  </div>
+
   <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
   <script type="module" src="assets/js/starter.js"></script>
-  <script src="js/all.min.js"></script>
 </body>
 
 </html>
