--- a/index.html
+++ b/index.html
@@ -41,10 +41,69 @@
   <div id="carousel" class="carousel slide" data-ride="carousel" data-interval="5000">
 <div class="carousel-inner">
 
-  <div class="carousel-item active"><img src="./assets/img/2.jpg" alt="" class="w-100"></div>
-  <div class="carousel-item"><img src="./assets/img/1.jpg" alt="" class="w-100"></div>
-  <div class="carousel-item"><img src="./assets/img/3.jpg" alt="" class="w-100"></div>
-  <div class="carousel-item"><img src="./assets/img/4.jpg" alt="" class="w-100"></div>
+  <div class="carousel-item active"><img src="./assets/img/2.jpg" alt="Photo of dog" class="w-100">
+    <div class="carousel-caption d-none d-lg-block">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-8 bg-custom  py-3 px-0">
+            <h1>Karma</h1>
+            <div class="border-top w-50 mx-auto my-3" id="border-primary"></div>
+            <h3 class="pb-3">Z nami wybierzesz rozsądnie</h3>
+            <a href="View demo" class="btn btn-danger btn-lg mr-2">Zamów</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  
+  </div>
+  <div class="carousel-item"><img src="./assets/img/1.jpg" alt="Photo of dog" class="w-100">
+    <div class="carousel-caption d-none d-lg-block">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-8 bg-custom  py-3 px-0">
+            <h1>Test</h1>
+            <div class="border-top w-50 mx-auto my-3" id="border-primary"></div>
+            <h3 class="pb-3">Test test</h3>
+            <a href="View demo" class="btn btn-danger btn-lg mr-2">View demo</a>
+            <a href="View demo" class="btn btn-primary btn-lg ml-2">Test</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  
+  </div>
+  <div class="carousel-item"><img src="./assets/img/3.jpg" alt="Photo of dog" class="w-100">
+  
+    <div class="carousel-caption d-none d-lg-block">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-8 bg-custom  py-3 px-0">
+            <h1>Test</h1>
+            <div class="border-top w-50 mx-auto my-3" id="border-primary"></div>
+            <h3 class="pb-3">Test test</h3>
+            <a href="View demo" class="btn btn-danger btn-lg mr-2">View demo</a>
+            <a href="View demo" class="btn btn-primary btn-lg ml-2">Test</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="carousel-item"><img src="./assets/img/4.jpg" alt="Photo of dog" class="w-100">
+  
+    <div class="carousel-caption d-none d-lg-block">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-8 bg-custom  py-3 px-0">
+            <h1>Test</h1>
+            <div class="border-top w-50 mx-auto my-3" id="border-primary"></div>
+            <h3 class="pb-3">Test test</h3>
+            <a href="View demo" class="btn btn-danger btn-lg mr-2">View demo</a>
+            <a href="View demo" class="btn btn-primary btn-lg ml-2">Test</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
 </div>
 
