--- a/index.html
+++ b/index.html
@@ -1,124 +1,182 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1 viewport-fit=cover"
+    />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="shortcut icon" href="favicon.ico" />
+    <link rel="stylesheet" href="assets/css/starter.css" />
+    <title>Bootstrap-webpack</title>
+  </head>
 
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1 viewport-fit=cover" />
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <link rel="shortcut icon" href="favicon.ico" />
-  <link rel="stylesheet" href="assets/css/starter.css" />
-  <title>Bootstrap-webpack</title>
-</head>
+  <body>
+    <div class="top-bar">
+      <div class="container">
+        <div class="col-12 text-right">
+          <a href="tel:+4855555555">ZADZWOŃ DO NAS</a>
+        </div>
+      </div>
+    </div>
 
-<body>
-  <div class="top-bar">
+    <nav class="navbar bg-light navbar-light navbar-expand-lg">
+      <div class="container">
+        <a href="index.html" class="navbar-brand"
+          ><img
+            src="./assets/img/logo.png"
+            alt="Logo of Puppella"
+            title="Logo of Puppella"
+        /></a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarResponsive"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a href="index.html" class="nav-link active">Home</a>
+            </li>
+            <li class="nav-item"><a href="" class="nav-link">O nas</a></li>
+            <li class="nav-item"><a href="" class="nav-link">Produkty</a></li>
+            <li class="nav-item"><a href="" class="nav-link">Usługi</a></li>
+            <li class="nav-item"><a href="" class="nav-link">Kontakt</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <div
+      id="carousel"
+      class="carousel slide"
+      data-ride="carousel"
+      data-interval="50000"
+    >
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="./assets/img/2.jpg" alt="Photo of dog" class="w-100" />
+          <div class="carousel-caption d-none d-lg-block">
+            <div class="container">
+              <div class="row justify-content-center">
+                <div class="col-8 bg-custom py-3 px-0">
+                  <h1>Karma</h1>
+                  <div
+                    class="border-top w-50 mx-auto my-3"
+                    id="border-primary"
+                  ></div>
+                  <h2 class="pb-3">Z nami wybierzesz rozsądnie</h2>
+                  <a href="View demo" class="btn btn-danger btn-lg">Zamów</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="./assets/img/1.jpg" alt="Photo of dog" class="w-100" />
+          <div class="carousel-caption d-none d-lg-block">
+            <div class="container">
+              <div class="row justify-content-end text-right">
+                <div class="col-4 bg-custom py-3 px-0 pr-3">
+                  <h2 class="pb-3">Test test</h2>
+                  <p class="lead pb-3">Test test test</p>
+                  <a href="View demo" class="btn btn-danger btn-lg">Zamów</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="./assets/img/3.jpg" alt="Photo of dog" class="w-100" />
+
+          <div class="carousel-caption d-none d-lg-block">
+            <div class="container">
+              <div class="row justify-content-start text-left">
+                <div class="col-5 bg-custom py-3 px-0 pl-3">
+                  <h2 class="pb-3">Test test</h2>
+                  <p class="lead">Test test test</p>
+                  <a href="View demo" class="btn btn-primary btn-lg"
+                    >View demo</a
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="./assets/img/4.jpg" alt="Photo of dog" class="w-100" />
+
+          <div class="carousel-caption d-none d-lg-block">
+            <div class="container">
+              <div class="row justify-content-center">
+                <div class="col-8 bg-custom py-3 px-0">
+                  <h2>Test</h2>
+                  <div
+                    class="border-top w-50 mx-auto my-3"
+                    id="border-primary"
+                  ></div>
+                  <h3 class="pb-3">Test test</h3>
+                  <a href="View demo" class="btn btn-danger btn-lg mr-2"
+                    >View demo</a
+                  >
+                  <a href="View demo" class="btn btn-primary btn-lg ml-2"
+                    >Test</a
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <a
+        href="#carousel"
+        class="carousel-control-prev"
+        role="button"
+        data-slide="prev"
+      >
+        <img src="./assets/img/prev.svg" alt="Icon moving to previous foto" />
+      </a>
+
+      <a
+        href="#carousel"
+        class="carousel-control-next"
+        role="button"
+        data-slide="next"
+      >
+        <img src="./assets/img/next.svg" alt="Icon moving to next foto" />
+      </a>
+    </div>
+
+    <div class="col-12 text-center mt-5"></div>
+    <h2 class="text-dark text-center pt-4">Nasza oferta</h2>
+    <div class="border-top w-25 mx-auto my-3" id="border-primary"></div>
+    <p class="lead text-center">Test test test</p>
+
     <div class="container">
-      <div class="col-12 text-right">
-        <a href="tel:+485883452593">ZADZWOŃ DO NAS</a>
-      </div>
-    </div>
-  </div>
-
-  <nav class="navbar bg-light navbar-light navbar-expand-lg">
-    <div class="container">
-      <a href="index.html" class="navbar-brand"><img src="./assets/img/logo.png" alt="Logo of Puppella"
-          title="Logo of Puppella" /></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item"><a href="index.html" class="nav-link active">Home</a></li>
-          <li class="nav-item"><a href="" class="nav-link">About</a></li>
-          <li class="nav-item"><a href="" class="nav-link">Services</a></li>
-          <li class="nav-item"><a href="" class="nav-link">Products</a></li>
-          <li class="nav-item"><a href="" class="nav-link">Contact</a></li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-
-  <div id="carousel" class="carousel slide" data-ride="carousel" data-interval="5000">
-<div class="carousel-inner">
-
-  <div class="carousel-item active"><img src="./assets/img/2.jpg" alt="Photo of dog" class="w-100">
-    <div class="carousel-caption d-none d-lg-block">
-      <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-8 bg-custom  py-3 px-0">
-            <h1>Karma</h1>
-            <div class="border-top w-50 mx-auto my-3" id="border-primary"></div>
-            <h3 class="pb-3">Z nami wybierzesz rozsądnie</h3>
-            <a href="View demo" class="btn btn-danger btn-lg mr-2">Zamów</a>
-          </div>
+      <div class="row my-5">
+        <div class="col-md-6 my-4">
+          <img src="./assets/img/food.jpg" alt="" class="w-100" />
+          <h4 class="my-4 text-center">Test</h4>
+          <p class="lead text-center">Test test test</p>
+          <a href="#" class="btn btn-outline-dark btn-md">Cennik</a>
+        </div>
+        <div class="col-md-6 my-4">
+          <img src="./assets/img/service.jpg" alt="" class="w-100" />
+          <h4 class="my-4 text-center">Test</h4>
+          <p class="lead text-center">Test test test</p>
+          <a href="#" class="btn btn-outline-dark btn-md">Cennik</a>
         </div>
       </div>
     </div>
-  
-  </div>
-  <div class="carousel-item"><img src="./assets/img/1.jpg" alt="Photo of dog" class="w-100">
-    <div class="carousel-caption d-none d-lg-block">
-      <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-8 bg-custom  py-3 px-0">
-            <h1>Test</h1>
-            <div class="border-top w-50 mx-auto my-3" id="border-primary"></div>
-            <h3 class="pb-3">Test test</h3>
-            <a href="View demo" class="btn btn-danger btn-lg mr-2">View demo</a>
-            <a href="View demo" class="btn btn-primary btn-lg ml-2">Test</a>
-          </div>
-        </div>
-      </div>
-    </div>
-  
-  </div>
-  <div class="carousel-item"><img src="./assets/img/3.jpg" alt="Photo of dog" class="w-100">
-  
-    <div class="carousel-caption d-none d-lg-block">
-      <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-8 bg-custom  py-3 px-0">
-            <h1>Test</h1>
-            <div class="border-top w-50 mx-auto my-3" id="border-primary"></div>
-            <h3 class="pb-3">Test test</h3>
-            <a href="View demo" class="btn btn-danger btn-lg mr-2">View demo</a>
-            <a href="View demo" class="btn btn-primary btn-lg ml-2">Test</a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="carousel-item"><img src="./assets/img/4.jpg" alt="Photo of dog" class="w-100">
-  
-    <div class="carousel-caption d-none d-lg-block">
-      <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-8 bg-custom  py-3 px-0">
-            <h1>Test</h1>
-            <div class="border-top w-50 mx-auto my-3" id="border-primary"></div>
-            <h3 class="pb-3">Test test</h3>
-            <a href="View demo" class="btn btn-danger btn-lg mr-2">View demo</a>
-            <a href="View demo" class="btn btn-primary btn-lg ml-2">Test</a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
 
-</div>
 
-<a href="#carousel" class="carousel-control-prev" role="button" data-slide="prev">
-  <img src="./assets/img/prev.svg" alt="Icon moving to previous foto">
-</a>
 
-<a href="#carousel" class="carousel-control-next" role="button" data-slide="next">
-  <img src="./assets/img/next.svg" alt="Icon moving to next foto">
-</a>
-
-  </div>
-
-  <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
-  <script type="module" src="assets/js/starter.js"></script>
-</body>
-
+    <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
+    <script type="module" src="assets/js/starter.js"></script>
+  </body>
 </html>
