third section main structure

--- a/index.html
+++ b/index.html
@@ -161,20 +161,36 @@
       <div class="row my-5">
         <div class="col-md-6 my-4">
           <img src="./assets/img/food.jpg" alt="" class="w-100" />
-          <h4 class="my-4 text-center">Test</h4>
+          <h4 class="my-4 text-center">Produkty</h4>
           <p class="lead text-center">Test test test</p>
           <a href="#" class="btn btn-outline-dark btn-md">Cennik</a>
         </div>
         <div class="col-md-6 my-4">
           <img src="./assets/img/service.jpg" alt="" class="w-100" />
-          <h4 class="my-4 text-center">Test</h4>
+          <h4 class="my-4 text-center">Usługi</h4>
           <p class="lead text-center">Test test test</p>
           <a href="#" class="btn btn-outline-dark btn-md">Cennik</a>
         </div>
       </div>
     </div>
 
+<div class="fixed-background">
+  <div class="fixed-wrap">
+    <div class="fixed"></div>
+  </div>
+</div>
 
+<div class="container my-5">
+  <div class="row py-4">
+    <div class="col-lg-4 mb-4 my-lg-auto">
+      <h1 class="text-dark font-weight-bold mb-3">Test test tes</h1>
+      <p class="mb-4">Test test test test</p>
+      <a href="#" class="btn btn-outline-dark btn-lg">Nazwa</a>
+    </div>
+    <div class="col-lg-8"><img src="./assets/img/food2.jpg" alt="" class="w-100"></div>
+
+  </div>
+</div>
 
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script type="module" src="assets/js/starter.js"></script>
