--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
     <link rel="shortcut icon" href="favicon.ico" />
     <link rel="stylesheet" href="assets/css/starter.css" />
     <title>Bootstrap-webpack</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      crossorigin="anonymous"
+    />
   </head>
 
   <body>
@@ -174,24 +180,54 @@
       </div>
     </div>
 
-<div class="fixed-background">
-  <div class="fixed-wrap">
-    <div class="fixed"></div>
-  </div>
-</div>
-
-<div class="container my-5">
-  <div class="row py-4">
-    <div class="col-lg-4 mb-4 my-lg-auto">
-      <h1 class="text-dark font-weight-bold mb-3">Test test tes</h1>
-      <p class="mb-4">Test test test test</p>
-      <a href="#" class="btn btn-outline-dark btn-lg">Nazwa</a>
+    <div class="fixed-background">
+      <div class="fixed-wrap">
+        <div class="fixed"></div>
+      </div>
     </div>
-    <div class="col-lg-8"><img src="./assets/img/food2.jpg" alt="" class="w-100"></div>
 
-  </div>
-</div>
+    <div class="container my-5">
+      <div class="row py-4">
+        <div class="col-lg-4 mb-4 my-lg-auto">
+          <h1 class="text-dark font-weight-bold mb-3">PRODUKTY</h1>
+          <p class="mb-4">Test test test test</p>
+          <a href="#" class="btn btn-outline-dark btn-lg">Nazwa</a>
+        </div>
+        <div class="col-lg-8">
+          <img src="./assets/img/food3.jpg" alt="" class="w-100" />
+        </div>
+      </div>
+    </div>
 
+    <div class="container my-5">
+      <div class="row py-4">
+        <div class="col-lg-8">
+          <img src="./assets/img/food3.jpg" alt="" class="w-100" />
+        </div>
+        <div class="col-lg-4 mb-4 my-lg-auto text-right">
+          <h1 class="text-dark font-weight-bold mb-3">USŁUGI</h1>
+          <p class="mb-4">Test test test test</p>
+          <a href="#" class="btn btn-outline-dark btn-lg">Nazwa</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="jumbotron py-5 mb-0">
+      <div class="container">
+        <div class="row">div.col-md-7.col-lg-8</div>
+      </div>
+    </div>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+      integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
+      integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
+      crossorigin="anonymous"
+    ></script>
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script type="module" src="assets/js/starter.js"></script>
   </body>
