--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -19,7 +19,43 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
   </head>
   <body>
+    <div class="top-bar">
+      <div class="container">
+        <div class="col-12 text-right">
+          <a href="tel:+4855555555">ZADZWOŃ DO NAS</a>
+        </div>
+      </div>
+    </div>
 
+    <nav class="navbar bg-light navbar-light navbar-expand-lg">
+      <div class="container">
+        <a href="index.html" class="navbar-brand"
+          ><img
+            src="../assets/img/logo.png"
+            alt="Logo of Puppella"
+            title="Logo of Puppella"
+        /></a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarResponsive"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a href="index.html" class="nav-link active">Home</a>
+            </li>
+            <li class="nav-item"><a href="" class="nav-link">O nas</a></li>
+            <li class="nav-item"><a href="" class="nav-link">Produkty</a></li>
+            <li class="nav-item"><a href="" class="nav-link">Usługi</a></li>
+            <li class="nav-item"><a href="" class="nav-link">Kontakt</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
   </body>
