--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -57,6 +57,113 @@
       </div>
     </nav>
 
+    <div
+    id="carousel"
+    class="carousel slide"
+    data-ride="carousel"
+    data-interval="5000"
+  >
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="../assets/img/2.jpg" alt="Photo of dog" class="w-100" />
+        <div class="carousel-caption d-none d-lg-block">
+          <div class="container">
+            <div class="row justify-content-center">
+              <div class="col-8 bg-custom py-3 px-0">
+                <h1>Karma</h1>
+                <div
+                  class="border-top w-50 mx-auto my-3"
+                  id="border-primary"
+                ></div>
+                <h2 class="pb-3">Z nami wybierzesz rozsądnie</h2>
+                <a href="View demo" class="btn btn-danger btn-lg">Zamów</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="../assets/img/1.jpg" alt="Photo of dog" class="w-100" />
+        <div class="carousel-caption d-none d-lg-block">
+          <div class="container">
+            <div class="row justify-content-end text-right">
+              <div class="col-4 bg-custom py-3 px-0 pr-3">
+                <h2 class="pb-3">Test test</h2>
+                <p class="lead pb-3">Test test test</p>
+                <a href="View demo" class="btn btn-danger btn-lg">Zamów</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="../assets/img/3.jpg" alt="Photo of dog" class="w-100" />
+
+        <div class="carousel-caption d-none d-lg-block">
+          <div class="container">
+            <div class="row justify-content-start text-left">
+              <div class="col-5 bg-custom py-3 px-0 pl-3">
+                <h2 class="pb-3">Test test</h2>
+                <p class="lead">Test test test</p>
+                <a href="View demo" class="btn btn-primary btn-lg"
+                  >View demo</a
+                >
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="../assets/img/4.jpg" alt="Photo of dog" class="w-100" />
+
+        <div class="carousel-caption d-none d-lg-block">
+          <div class="container">
+            <div class="row justify-content-center">
+              <div class="col-8 bg-custom py-3 px-0">
+                <h2>Test</h2>
+                <div
+                  class="border-top w-50 mx-auto my-3"
+                  id="border-primary"
+                ></div>
+                <h3 class="pb-3">Test test</h3>
+                <a href="View demo" class="btn btn-danger btn-lg mr-2"
+                  >View demo</a
+                >
+                <a href="View demo" class="btn btn-primary btn-lg ml-2"
+                  >Test</a
+                >
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <a
+      href="#carousel"
+      class="carousel-control-prev"
+      role="button"
+      data-slide="prev"
+    >
+      <img src="../assets/img/prev.svg" alt="Icon moving to previous foto" />
+    </a>
+
+    <a
+      href="#carousel"
+      class="carousel-control-next"
+      role="button"
+      data-slide="next"
+    >
+      <img src="../assets/img/next.svg" alt="Icon moving to next foto" />
+    </a>
+  </div>
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
+
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+ 
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+     
   </body>
 </html>
