--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -65,7 +65,7 @@
   >
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="../assets/img/2.jpg" alt="Photo of dog" class="w-100" />
+        <img src="../assets/img/3.jpg" alt="Photo of dog" class="w-100" />
         <div class="carousel-caption d-none d-lg-block">
           <div class="container">
             <div class="row justify-content-center">
@@ -83,7 +83,7 @@
         </div>
       </div>
       <div class="carousel-item">
-        <img src="../assets/img/1.jpg" alt="Photo of dog" class="w-100" />
+        <img src="../assets/img/2.jpg" alt="Photo of dog" class="w-100" />
         <div class="carousel-caption d-none d-lg-block">
           <div class="container">
             <div class="row justify-content-end text-right">
@@ -97,12 +97,12 @@
         </div>
       </div>
       <div class="carousel-item">
-        <img src="../assets/img/3.jpg" alt="Photo of dog" class="w-100" />
+        <img src="../assets/img/1.jpg" alt="Photo of dog" class="w-100" />
 
         <div class="carousel-caption d-none d-lg-block">
           <div class="container">
             <div class="row justify-content-start text-left">
-              <div class="col-5 bg-custom py-3 px-0 pl-3">
+              <div class="col-4 bg-custom py-3 px-0 pl-3">
                 <h2 class="pb-3">Test test</h2>
                 <p class="lead">Test test test</p>
                 <a href="View demo" class="btn btn-primary btn-lg"
@@ -158,6 +158,89 @@
     </a>
   </div>
 
+  <div class="col-12 text-center mt-5"></div>
+    <h2 class="text-dark text-center pt-4">Nasza oferta</h2>
+    <div class="border-top w-25 mx-auto my-3" id="border-primary"></div>
+    <p class="lead text-center">Test test test</p>
+
+    <div class="container">
+      <div class="row my-5">
+        <div class="col-md-6 my-4">
+          <img src="../assets/img/food.jpg" alt="" class="w-100" />
+          <h4 class="my-4 text-center">Produkty</h4>
+          <p class="lead text-center">Test test test</p>
+          <a href="#" class="btn btn-outline-dark btn-md">Cennik</a>
+        </div>
+        <div class="col-md-6 my-4">
+          <img src="../assets/img/service.jpg" alt="" class="w-100" />
+          <h4 class="my-4 text-center">Usługi</h4>
+          <p class="lead text-center">Test test test</p>
+          <a href="#" class="btn btn-outline-dark btn-md">Cennik</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="fixed-background">
+      <div class="fixed-wrap">
+        <div class="fixed"></div>
+      </div>
+    </div>
+
+    <div class="container my-5">
+      <div class="row py-4">
+        <div class="col-lg-4 mb-4 my-lg-auto">
+          <h1 class="text-dark font-weight-bold mb-3">PRODUKTY</h1>
+          <p class="mb-4">Test test test test</p>
+          <a href="#" class="btn btn-outline-dark btn-lg">Nazwa</a>
+        </div>
+        <div class="col-lg-8">
+          <img src="../assets/img/food3.jpg" alt="" class="w-100" />
+        </div>
+      </div>
+    </div>
+
+    <div class="container my-5">
+      <div class="row py-4">
+        <div class="col-lg-4 mb-4 my-lg-auto text-right">
+          <h1 class="text-dark font-weight-bold mb-3">USŁUGI</h1>
+          <p class="mb-4">Test test test test</p>
+          <a href="#" class="btn btn-outline-dark btn-lg">Nazwa</a>
+        </div>
+        <div class="col-lg-8">
+          <img src="../assets/img/service.jpg" alt="" class="w-100" />
+        </div>
+      </div>
+    </div>
+
+    <div class="jumbotron py-5 mb-0">
+      <div class="container">
+        <div class="row">
+        <div class="col-md-7.col-lg-8 col-xl-9 my-auto">
+          <h4> Test test test Test test test Test test test Test test test  test test Test test test Test test</h4>
+        </div>
+        <div class="col-md-5 col-lg-4 col-xl-3 pt-4 pt-md-0">
+          <a href="#" class="btn btn-primary btn-lg">Kontakt</a>
+        </div>
+      </div>
+      </div>
+    </div>
+<footer>
+  <div class="container bg-dark">
+    <div class="row text-liht text-center py-4 justify-content-center">
+
+      <div class="col-sm-10 col-md-8 col-lg-6">
+        <img src="../assets/img/logo.png" alt="Logo of Puppella">
+        <p>Test test test</p>
+        <ul class="social pt-3">
+          <li><a href="" target="_blank"><i class="fab fa-"></i></a></li>
+          <li><a href="" target="_blank"><i class="fab fa-"></i></a></li>
+          <li><a href="" target="_blank"><i class="fab fa-"></i></a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+
+</footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
 
